# Emerald

./: .gitignore  CMakeLists.txt  ChangeLog.md  Emerald.cabal
src/: CMakeLists.txt
src/Scheduling/: RoundRobinScheduling.hs
src/Search/: BinarySearch.cpp  BinarySearch.h  BinarySearch.hs  LinearSearch.cpp  LinearSearch.h  LinearSearch.hs
src/Sort/: BubbleSort.cpp  BubbleSort.h  BubbleSort.hs  InsertionSort.cpp  InsertionSort.h  InsertionSort.hs  MergeSort.hs  QuickSort.hs  SelectionSort.hs
test/: CMakeLists.txt
test/SearchTests/: BinarySearchTests.cpp  CMakeLists.txt  LinearSearchTests.cpp
test/SortTests/: BubbleSortTests.cpp  CMakeLists.txt  InsertionSortTests.cpp
